--- a/undoable-counter/style.css
+++ b/undoable-counter/style.css
@@ -56,9 +56,10 @@ body {
 }
 
 .app__numbers > span {
-  font-size: large;
+  font-size: 2rem;
   font-weight: bold;
   padding: 1em;
+  min-width: 150px;
   user-select: none;
 }
 
@@ -67,6 +68,14 @@ body {
 }
 
 .app__history > ul {
-  border: 1px solid;
+  border: 3px solid;
+  display: grid;
+  font-weight: bold;
+  gap: 0.5em;
+  list-style: none;
+  margin-inline: auto;
   margin-top: 2em;
+  padding-left: 0;
+  padding: 1em;
+  width: 33%;
 }
